--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/icon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>XV Años</title>
- 
+
+  <meta property="og:title" content=XV Años>
+  <meta property="og:site_name" content=Mis XV>
+  <meta property="og:url" content=https://kimberly-denis.netlify.app />
+  <meta property="og:description" content="">
+  <meta property="og:type" content=website>
+  <meta property="og:image" content=https://ibb.co/M91TZ9v>
+
 </head>
 
-<body>  
+<body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
   <script src="https://kit.fontawesome.com/00dc08dadd.js" crossorigin="anonymous"></script>
