update meta tag

--- a/index.html
+++ b/index.html
@@ -5,15 +5,27 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/icon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>XV Años</title>
 
-  <meta property="og:title" content=XV Años>
-  <meta property="og:site_name" content=Mis XV>
-  <meta property="og:url" content=https://kimberly-denis.netlify.app />
-  <meta property="og:description" content="">
-  <meta property="og:type" content=website>
-  <meta property="og:image" content=https://ibb.co/M91TZ9v>
+  <!-- Primary Meta Tags -->
+  <title>Mix Xv Años</title>
+  <meta name="title" content="Mix Xv Años" />
+  <meta name="description" content="Acompañame a este gran dia" />
 
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://kimberly-denis.netlify.app/" />
+  <meta property="og:title" content="Mix Xv Años" />
+  <meta property="og:description" content="Acompañame a este gran dia" />
+  <meta property="og:image" content="https://i.ibb.co/jHwKbHN/318-3189495-mis-quince-aos-letras-png-logo-xv-aos.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://kimberly-denis.netlify.app/" />
+  <meta property="twitter:title" content="Mix Xv Años" />
+  <meta property="twitter:description" content="Acompañame a este gran dia" />
+  <meta property="twitter:image" content="https://i.ibb.co/jHwKbHN/318-3189495-mis-quince-aos-letras-png-logo-xv-aos.png" />
+
+  <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 
 <body>
