--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://kimberly-denis.netlify.app/" />
   <meta property="og:title" content="Mix Xv Años" />
-  <meta property="og:description" content="Acompáñame a este gran dia" />
+  <meta property="og:description" content="Acompáñame a este gran día" />
   <meta property="og:image" content="https://i.ibb.co/2v8r46D/c8b000fb-58ef-4350-8de5-5f82c386a5c6.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://kimberly-denis.netlify.app/" />
   <meta property="twitter:title" content="Mix Xv Años" />
-  <meta property="twitter:description" content="Acompáñame a este gran dia" />
+  <meta property="twitter:description" content="Acompáñame a este gran día" />
   <meta property="twitter:image" content="https://i.ibb.co/2v8r46D/c8b000fb-58ef-4350-8de5-5f82c386a5c6.jpg" />
 
   <!-- Meta Tags Generated with https://metatags.io -->
