--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Primary Meta Tags -->
   <title>Mix Xv Años</title>
   <meta name="title" content="Mix Xv Años" />
-  <meta name="description" content="Acompañame a este gran dia" />
+  <meta name="description" content="Acompañame a este gran día" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
