--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
   <meta property="twitter:image" content="https://i.ibb.co/2v8r46D/c8b000fb-58ef-4350-8de5-5f82c386a5c6.jpg" />
 
   <!-- Meta Tags Generated with https://metatags.io -->
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KH6J5Y7K78"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-KH6J5Y7K78');
+  </script>
 </head>
 
 <body>
