--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
 
   <!-- Meta Tags Generated with https://metatags.io -->
 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KH6J5Y7K78"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-KH6J5Y7K78');
+  </script>
+
 </head>
 
 <body>
