--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
-  <title>Mix Xv Años</title>
-  <meta name="title" content="Mix Xv Años" />
-  <meta name="description" content="Acompañame a este gran día" />
+  <title>Mis Xv Años</title>
+  <meta name="title" content="Mis Xv Años" />
+  <meta name="description" content="Acompáñame a este gran día" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
