--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://kimberly-denis.netlify.app/" />
+  <meta property="og:url" content="https://xv-fernanda.netlify.app/" />
   <meta property="og:title" content="Mix Xv Años" />
   <meta property="og:description" content="Acompáñame a este gran día" />
-  <meta property="og:image" content="https://i.ibb.co/2v8r46D/c8b000fb-58ef-4350-8de5-5f82c386a5c6.jpg" />
+  <meta property="og:image" content="https://ibb.co/d48FSJH" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://kimberly-denis.netlify.app/" />
+  <meta property="twitter:url" content="https://xv-fernanda.netlify.app/" />
   <meta property="twitter:title" content="Mix Xv Años" />
   <meta property="twitter:description" content="Acompáñame a este gran día" />
-  <meta property="twitter:image" content="https://i.ibb.co/2v8r46D/c8b000fb-58ef-4350-8de5-5f82c386a5c6.jpg" />
+  <meta property="twitter:image" content="https://ibb.co/d48FSJH" />
 
   <!-- Meta Tags Generated with https://metatags.io -->
   
