--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://xv-fernanda.netlify.app/" />
-  <meta property="og:title" content="Mix Xv Años" />
+  <meta property="og:title" content="Mis Xv Años" />
   <meta property="og:description" content="Acompáñame a este gran día" />
-  <meta property="og:image" content="https://ibb.co/d48FSJH" />
+  <meta property="og:image" content="https://i.ibb.co/3mg2wYP/logo.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://xv-fernanda.netlify.app/" />
-  <meta property="twitter:title" content="Mix Xv Años" />
+  <meta property="twitter:title" content="Mis Xv Años" />
   <meta property="twitter:description" content="Acompáñame a este gran día" />
-  <meta property="twitter:image" content="https://ibb.co/d48FSJH" />
+  <meta property="twitter:image" content="https://i.ibb.co/3mg2wYP/logo.jpg" />
 
   <!-- Meta Tags Generated with https://metatags.io -->
   
