change home and photo

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <meta property="og:url" content="https://xv-fernanda.netlify.app/" />
   <meta property="og:title" content="Mis Xv Años Miriam" />
   <meta property="og:description" content="Acompáñame a este gran día" />
-  <meta property="og:image" content="https://i.ibb.co/3mg2wYP/logo.jpg" />
+  <meta property="og:image" content="https://i.ibb.co/SXWtQXQ/logo.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://xv-fernanda.netlify.app/" />
   <meta property="twitter:title" content="Mis Xv Años Miriam" />
   <meta property="twitter:description" content="Acompáñame a este gran día" />
-  <meta property="twitter:image" content="https://i.ibb.co/3mg2wYP/logo.jpg" />
+  <meta property="twitter:image" content="https://i.ibb.co/SXWtQXQ/logo.jpg" />
 
   <!-- Meta Tags Generated with https://metatags.io -->
   
