--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 
   <!-- Primary Meta Tags -->
   <title>Mis Xv Años</title>
-  <meta name="title" content="Mis Xv Años Miriam" />
+  <meta name="title" content="Mis XV - María Isabel" />
   <meta name="description" content="Acompáñame a este gran día" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://xv-fernanda.netlify.app/" />
-  <meta property="og:title" content="Mis Xv Años Miriam" />
+  <meta property="og:url" content="https://xv-isabel.netlify.app/" />
+  <meta property="og:title" content="Mis XV - María Isabel" />
   <meta property="og:description" content="Acompáñame a este gran día" />
   <meta property="og:image" content="https://i.ibb.co/SXWtQXQ/logo.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://xv-fernanda.netlify.app/" />
-  <meta property="twitter:title" content="Mis Xv Años Miriam" />
+  <meta property="twitter:url" content="https://xv-isabel.netlify.app/" />
+  <meta property="twitter:title" content="Mis XV - María Isabel" />
   <meta property="twitter:description" content="Acompáñame a este gran día" />
   <meta property="twitter:image" content="https://i.ibb.co/SXWtQXQ/logo.jpg" />
 
