--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://xv-monse.netlify.app/" />
-  <meta property="og:title" content="Mis XV - María monse" />
+  <meta property="og:title" content="Mis XV - Monserrat" />
   <meta property="og:description" content="Acompáñame a este gran día" />
   <meta property="og:image" content="https://ibb.co/LtwrwrC" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://xv-monse.netlify.app/" />
-  <meta property="twitter:title" content="Mis XV - María monse" />
+  <meta property="twitter:title" content="Mis XV - Monserrat" />
   <meta property="twitter:description" content="Acompáñame a este gran día" />
   <meta property="twitter:image" content="https://ibb.co/LtwrwrC" />
 
