--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <meta property="og:url" content="https://xv-monse.netlify.app/" />
   <meta property="og:title" content="Mis XV - Monserrat" />
   <meta property="og:description" content="Acompáñame a este gran día" />
-  <meta property="og:image" content="https://ibb.co/LtwrwrC" />
+  <meta property="og:image" content="https://i.ibb.co/8KDFYQB/Whats-App-Image-2024-11-27-at-21-44-35.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://xv-monse.netlify.app/" />
   <meta property="twitter:title" content="Mis XV - Monserrat" />
   <meta property="twitter:description" content="Acompáñame a este gran día" />
-  <meta property="twitter:image" content="https://ibb.co/LtwrwrC" />
+  <meta property="twitter:image" content="https://i.ibb.co/8KDFYQB/Whats-App-Image-2024-11-27-at-21-44-35.jpg" />
 
   <!-- Meta Tags Generated with https://metatags.io -->
   
