change meta tag

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <meta property="og:url" content="https://xv-isabel.netlify.app/" />
   <meta property="og:title" content="Mis XV - María Isabel" />
   <meta property="og:description" content="Acompáñame a este gran día" />
-  <meta property="og:image" content="https://i.ibb.co/SXWtQXQ/logo.jpg" />
+  <meta property="og:image" content="https://i.ibb.co/pxZ6mXT/567e7cd9-c562-4a62-b811-7facec5b305b.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://xv-isabel.netlify.app/" />
   <meta property="twitter:title" content="Mis XV - María Isabel" />
   <meta property="twitter:description" content="Acompáñame a este gran día" />
-  <meta property="twitter:image" content="https://i.ibb.co/SXWtQXQ/logo.jpg" />
+  <meta property="twitter:image" content="https://i.ibb.co/pxZ6mXT/567e7cd9-c562-4a62-b811-7facec5b305b.jpg" />
 
   <!-- Meta Tags Generated with https://metatags.io -->
   
