first version wedding

--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
-  <title>Mis XV Años</title>
-  <meta name="title" content="Mis XV - Monserrat" />
+  <title>Nuestra boda</title>
+  <meta name="title" content="Nuestra Boda - Yair & Yazmín" />
   <meta name="description" content="Acompáñame a este gran día" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://xv-monse.netlify.app/" />
-  <meta property="og:title" content="Mis XV - Monserrat" />
+  <meta property="og:title" content="Nuestra Boda - Yair & Yazmín" />
   <meta property="og:description" content="Acompáñame a este gran día" />
-  <meta property="og:image" content="https://i.ibb.co/jR887Kk/preview.jpg" />
+  <meta property="og:image" content="https://i.ibb.co/Q33FXpSZ/images-1.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://xv-monse.netlify.app/" />
-  <meta property="twitter:title" content="Mis XV - Monserrat" />
+  <meta property="twitter:title" content="Nuestra Boda - Yair & Yazmín" />
   <meta property="twitter:description" content="Acompáñame a este gran día" />
-  <meta property="twitter:image" content="https://i.ibb.co/jR887Kk/preview.jpg" />
+  <meta property="twitter:image" content="https://i.ibb.co/Q33FXpSZ/images-1.jpg" />
 
   <!-- Meta Tags Generated with https://metatags.io -->
   
