--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://xv-monse.netlify.app/" />
+  <meta property="og:url" content="https://wedding-yair-yaz.netlify.app/" />
   <meta property="og:title" content="Nuestra Boda - Yair & Yazmín" />
   <meta property="og:description" content="Acompáñame a este gran día" />
   <meta property="og:image" content="https://i.ibb.co/Q33FXpSZ/images-1.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://xv-monse.netlify.app/" />
+  <meta property="twitter:url" content="https://wedding-yair-yaz.netlify.app/" />
   <meta property="twitter:title" content="Nuestra Boda - Yair & Yazmín" />
   <meta property="twitter:description" content="Acompáñame a este gran día" />
   <meta property="twitter:image" content="https://i.ibb.co/Q33FXpSZ/images-1.jpg" />
