--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
-  <title>Nuestra boda</title>
-  <meta name="title" content="Nuestra Boda - Yair & Yazmín" />
+  <title>Mis XV años - Ximena</title>
+  <meta name="title" content="Mis XV años - Ximena" />
   <meta name="description" content="Acompáñame a este gran día" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://wedding-yair-yaz.netlify.app/" />
-  <meta property="og:title" content="Nuestra Boda - Yair & Yazmín" />
+  <meta property="og:url" content="https://xv-ximena.netlify.app/" />
+  <meta property="og:title" content="Mis XV años - Ximena" />
   <meta property="og:description" content="Acompáñame a este gran día" />
-  <meta property="og:image" content="https://i.ibb.co/Q33FXpSZ/images-1.jpg" />
+  <meta property="og:image" content="https://i.ibb.co/84rDMDcL/033ff8007510056982f255fa5fe6b94c.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://wedding-yair-yaz.netlify.app/" />
-  <meta property="twitter:title" content="Nuestra Boda - Yair & Yazmín" />
+  <meta property="twitter:url" content="https://xv-ximena.netlify.app/" />
+  <meta property="twitter:title" content="Mis XV años - Ximena" />
   <meta property="twitter:description" content="Acompáñame a este gran día" />
-  <meta property="twitter:image" content="https://i.ibb.co/Q33FXpSZ/images-1.jpg" />
+  <meta property="twitter:image" content="https://i.ibb.co/84rDMDcL/033ff8007510056982f255fa5fe6b94c.jpg" />
 
   <!-- Meta Tags Generated with https://metatags.io -->
   
