--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 
   <!-- Primary Meta Tags -->
   <title>Nuestra boda</title>
-  <meta name="title" content="Nuestra Boda - Yair & Yazmín" />
+  <meta name="title" content="Mi bautizo - Oliver" />
   <meta name="description" content="Acompáñame a este gran día" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://wedding-yair-yaz.netlify.app/" />
-  <meta property="og:title" content="Nuestra Boda - Yair & Yazmín" />
+  <meta property="og:title" content="Mi bautizo - Oliver" />
   <meta property="og:description" content="Acompáñame a este gran día" />
-  <meta property="og:image" content="https://i.ibb.co/Q33FXpSZ/images-1.jpg" />
+  <meta property="og:image" content="https://i.ibb.co/GQ6H8ZHr/recordatorios-bautizo-recuerdos.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://wedding-yair-yaz.netlify.app/" />
-  <meta property="twitter:title" content="Nuestra Boda - Yair & Yazmín" />
+  <meta property="twitter:title" content="Mi bautizo - Oliver" />
   <meta property="twitter:description" content="Acompáñame a este gran día" />
-  <meta property="twitter:image" content="https://i.ibb.co/Q33FXpSZ/images-1.jpg" />
+  <meta property="twitter:image" content="https://i.ibb.co/GQ6H8ZHr/recordatorios-bautizo-recuerdos.jpg" />
 
   <!-- Meta Tags Generated with https://metatags.io -->
   
