--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
-  <title>Nuestra boda</title>
+  <title>Mi bautizo - Oliver</title>
   <meta name="title" content="Mi bautizo - Oliver" />
   <meta name="description" content="Acompáñame a este gran día" />
 
